@@ -90,6 +90,7 @@ be removed.
           Bio::Taxonomy::*
           Bio::Tools::AlignFactory
           Bio::Tools::Analysis::DNA::ESEfinder
+          Bio::Tools::Analysis::Protein::ELM
           Bio::Tools::Phylo::Gumby
           Bio::Tools::dpAlign
           Bio::Tools::pSW
@@ -118,6 +119,7 @@ be removed.
           Bio::SeqIO::staden::read
           DBD::Pg
           DBD::SQLite
+          HTML::HeadParser
           MIME::Base64
           Memoize
           Text::ParseWords
